# localLanguageModel

./: Cargo.toml  main.rs  tts.js  uberduck.py
LLM/: main.rs
LLM/oldPredText/: 32420.txt  Entry.java  PredictDisplay.java  Tally.java  TallyMonster.java  TextPredictor.java  dupeTally.java  good.txt  test.java
oldPredText/: SimpleMap.java  SimpleSet.java  dupePredictDisplay.java  dupeTextPredictor.java  epic.txt  handbook.txt
