[package]
name = "localLangModel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
actix-web = "3.3.2"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "localLangModel"
path = "main.rs"
